buildscript {
    ext {
        bootVersion = '2.0.1.RELEASE'
    }

    repositories {
        mavenCentral()
        maven { url "https://plugins.gradle.org/m2/" }
        maven { url 'http://repo.spring.io/plugins-release' }
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:$bootVersion"
    }
}

apply plugin: 'org.springframework.boot'
apply plugin: 'maven'
apply plugin: 'java'

group 'edu.sdu'
version '0.1'

sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

bootRun {
    //compiling tests during bootRun increases the likelyhood of catching broken tests locally instead of on the CI
    dependsOn compileTestJava

    //pass in custom jvm args
    // source: https://stackoverflow.com/a/25079415
    // example: ./gradlew bootRun -PjvmArgs="--illegal-access=debug -Dwhatever=value"
    if (project.hasProperty('jvmArgs')) {
        jvmArgs project.jvmArgs.split('\\s+')
    }
}

bootJar {
    archiveName = "woz.jar"
}

// Makes sure JitPack packages the jar
install.dependsOn bootJar

//spring boot annotations processor
compileJava.dependsOn processResources

task wrapper(type: Wrapper) {
    gradleVersion = '4.10'
}